etc/tests/error/parser/module-block-extra-brace.ny
;; expect: unexpected token '}'
use std.core

{module 0 }
main() }
main()
